; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_bspfile_abstract.c_BSPFilesCleanup.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_bspfile_abstract.c_BSPFilesCleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bspDrawVerts = common dso_local global i64 0, align 8
@bspDrawSurfaces = common dso_local global i64 0, align 8
@bspLightBytes = common dso_local global i64 0, align 8
@bspGridPoints = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BSPFilesCleanup() #0 {
  %1 = load i64, i64* @bspDrawVerts, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* @bspDrawVerts, align 8
  %5 = call i32 @free(i64 %4)
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i64, i64* @bspDrawSurfaces, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i64, i64* @bspDrawSurfaces, align 8
  %11 = call i32 @free(i64 %10)
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i64, i64* @bspLightBytes, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i64, i64* @bspLightBytes, align 8
  %17 = call i32 @free(i64 %16)
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i64, i64* @bspGridPoints, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i64, i64* @bspGridPoints, align 8
  %23 = call i32 @free(i64 %22)
  br label %24

24:                                               ; preds = %21, %18
  ret void
}

declare dso_local i32 @free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
